ajout des pages restantes correctes pour le responsives design sur mobile

--- a/front/src/app/components/menu/menu.component.html
+++ b/front/src/app/components/menu/menu.component.html
@@ -45,7 +45,7 @@
   <mat-sidenav #sidenav mode="over" position="end" [opened]="false">
     <nav class="menu-mobile">
 
-        <a class="lienDeconnection" (click)="deconnection(); sidenav.close()">Déconnexion</a>
+        <a class="lienDeconnection" (click)="deconnection(); sidenav.close()" routerLink="">Déconnexion</a>
         <a routerLink="/index" (click)="sidenav.close()">Articles</a>
         <a routerLink="/themes" (click)="sidenav.close()">Thèmes</a>
         
