--- a/front/src/app/pages/index/index.component.scss
+++ b/front/src/app/pages/index/index.component.scss
@@ -1,6 +1,8 @@
 .extraitArticle {
     background-color: #F5F5F5;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 5px;
@@ -25,6 +27,19 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+.divFiltreMobile{
+    display: flex;
+    flex-direction: column;
+    height: 80px;
     justify-content: space-between;
     align-items: center;
     width: 80%;
