--- a/front/src/app/pages/profil/profil.component.scss
+++ b/front/src/app/pages/profil/profil.component.scss
@@ -22,6 +22,14 @@
     padding: 10px;
 }
 
+.themeMobile{
+    width: 100%;
+    background-color: #F5F5F5;
+    border-radius: 12px;
+    margin: 10px;
+    padding: 10px;
+}
+
 hr{
     width: 70%;
 }
