--- a/front/src/app/pages/themes/themes.component.scss
+++ b/front/src/app/pages/themes/themes.component.scss
@@ -1,8 +1,10 @@
 .extraitTheme {
     background-color: #F5F5F5;
     width: 500px;
-    margin-top: 20px;
-    margin-bottom: 20px;;
+    height: 150px;
+    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 5px;
 }
 
@@ -15,8 +17,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 80%;
+    justify-content: center;
+    width: 90%;
     margin: auto;
 }
 
@@ -24,6 +26,6 @@
 .pContenuDescription{
     display: -webkit-box;          /* Nécessaire pour line-clamp */
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;        /* Nombre de lignes à afficher */
+    -webkit-line-clamp: 3;        /* Nombre de lignes à afficher */
     overflow: hidden;
 }
