--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -17,6 +17,7 @@ button{
     border-radius: 8px; /* arrondi léger des coins */
     display: block; 
     margin: auto;
+
 }
 
 .boutonBlanc{
@@ -24,6 +25,7 @@ button{
     padding: 10px;
     padding-left: 50px;
     padding-right: 50px;
+    width: 200px;
 }
 
 .boutonBlanc:hover{
